@@ -25,10 +25,7 @@ duplication of effort and to make sure our changes merge easily.
   used for the internal evaluations of deep searches for a significant
   speed increase.  See FindBestMoveInEval() in eval.c from fibs2html.
 ** The cubedecision REDOUBLE_BEAVER should never occur -- should it be
-  removed?  We could add a "too good to beaver" cubedecision.  This is
-  not as silly as it sounds: you can currently take advantage of gnubg
-  to escape a backgammon by doubling, if you have cube access; gnubg
-  doesn't realise it's too good to beaver.
+  removed?
 ** Bearoff database changes:
 *** Use a more intelligent encoding in the 1-sided database, to conserve
   space.
